# memlocal_core

./: .env.example  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.MD  SECURITY.md
.claude/: architecture.md  conventions.md  gotchas.md  memory-subsystems.md  scoring.md  storage.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark_regression.yml  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/superpowers/: PHASE0_NOTES.md
flutter/: .pubignore  CHANGELOG.md  README.md  pubspec.yaml
flutter/android/: build.gradle  settings.gradle
flutter/example/: .env.example  README.md  pubspec.yaml
flutter/ios/: memlocal.podspec
flutter/lib/: memlocal.dart
flutter/linux/: CMakeLists.txt
flutter/macos/: memlocal.podspec
flutter/rust/: Cargo.toml
flutter/rust/src/: frb_generated.rs
flutter/rust/src/api/: skeleton.rs
flutter/windows/: CMakeLists.txt
src/: error.rs  lib.rs
src/api/: bridge.rs  mod.rs
src/consolidation/: consolidator.rs  mod.rs
src/http/: anthropic_client.rs  gemini_client.rs  jina_reranker.rs  llm_client.rs  mod.rs  openai_client.rs  openai_embeddings.rs
src/longterm/: affective.rs  episodic.rs  factual.rs  mod.rs  procedural.rs  prospective.rs  semantic.rs  social.rs  spatial.rs
src/models/: add_result.rs  config.rs  consolidation_result.rs  context_result.rs  memory_category.rs  memory_delta.rs  memory_edge.rs  memory_item.rs  memory_relation.rs  memory_search_result.rs  memory_type.rs  message.rs  mod.rs  prospective_item.rs  (+4 more)
tests/: integration_test.rs
(+41 files in other folders)
