[package]
name = "memlocal_core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core memory engine for memlocal — local-first AI memory layer with CozoDB"
keywords = ["ai", "memory", "graph", "vector-search", "embedded-database"]
categories = ["database", "science"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
http = ["dep:reqwest"]

[dependencies]
cozo = { version = "0.7", features = ["compact", "storage-sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
rayon = "=1.10.0"
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
flutter_rust_bridge = "=2.11.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
dotenvy = "0.15"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
